--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,12 @@
 @layer base {
   root,
   body {
-    @apply m-0 p-0 box-border;
+    @apply m-0 p-0 box-border overflow-x-hidden;
+  }
+}
+
+@layer components {
+  .dropdown-link {
+    @apply cursor-pointer py-2.5 pl-4 font-mont font-semibold text-black-200 tracking-widest transition duration-200 hover:text-aqua hover:bg-white-200;
   }
 }
