Design navbar with responsiveness
1. Insert custom breakpoints
2. Implement navbar with responsive design

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
 }
 
 @layer components {
+  .navbar-text {
+    @apply font-mont text-white-300 font-bold tracking-widest;
+  }
+
   .dropdown-link {
     @apply cursor-pointer py-2.5 pl-4 font-mont font-semibold text-black-200 tracking-widest transition duration-200 hover:text-aqua hover:bg-white-200;
   }
