Modify navbar and render hero on Page file
1. Navbar relative w-screen transferred to main container on Page.tsx
2. Navbar w-screen change to 91.67% and max-width of 1280px
3. Margin bottom of 24px for Navbar
4. Modify font-size for texts on Navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,13 +5,13 @@
 @layer base {
   root,
   body {
-    @apply m-0 p-0 box-border overflow-x-hidden;
+    @apply m-0 p-0 box-border overflow-x-hidden bg-white-300;
   }
 }
 
 @layer components {
   .navbar-text {
-    @apply font-mont text-white-300 font-bold tracking-widest;
+    @apply font-mont text-white-300 font-bold tracking-widest lg:text-xl 2xl:text-[1.75rem];
   }
 
   .dropdown-link {
