--- a/app/globals.css
+++ b/app/globals.css
@@ -75,10 +75,10 @@
   }
 
   .skillsSubHeading {
-    @apply mb-2 font-semibold md:text-2xl xl:text-3xl;
+    @apply text-black-100 mb-2 font-semibold md:text-2xl xl:text-3xl;
   }
 
   .skillsAnimation {
-    @apply hidden w-44 h-44 md:block md:absolute md:right-28 md:bottom-20 lg:right-5 lg:w-[22rem] lg:h-[22rem] xl:w-[28rem] xl:h-[28rem];
+    @apply hidden w-56 h-56 md:block md:absolute md:right-28 md:bottom-20 lg:right-5 lg:w-[22rem] lg:h-[22rem] xl:w-[28rem] xl:h-[28rem];
   }
 }
