--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,10 @@
     @apply relative z-0 bg-dark-blue;
   }
 
+  .redirect-button {
+    @apply rounded-2xl bg-aqua px-4 py-2 transition-colors duration-300 ease-out hover:bg-dark-aqua dark:bg-light-orange dark:hover:bg-orange-red;
+  }
+
   .navbar-text {
     @apply font-mont font-bold tracking-widest text-white-300 dark:text-white-400 lg:text-xl 2xl:text-[1.75rem];
   }
@@ -78,31 +82,11 @@
     @apply hidden h-44 w-44 lg:col-start-3  lg:col-end-4 lg:row-start-1 lg:row-end-5 lg:block lg:h-[14rem] lg:w-[14rem] lg:place-self-center xl:h-[18rem] xl:w-[18rem];
   }
 
-  .projectCard {
-    @apply grid grid-rows-1 rounded-lg py-4 px-5 shadow-project md:grid-cols-12 md:grid-rows-5 md:items-center md:justify-items-center md:rounded-none md:shadow-none;
+  .project-image-container {
+    @apply absolute top-0 left-0 -z-10 h-full max-h-[670px] w-full max-w-[670px] opacity-10 md:top-1/4 md:h-1/2 md:w-1/2 md:border-2 md:border-black-200 md:opacity-60 dark:md:opacity-30 lg:top-[12.5%] lg:h-3/4 lg:w-1/2;
   }
 
-  .projectIconsHeading {
-    @apply mb-2 font-semibold md:text-center md:text-lg lg:text-xl xl:text-2xl;
-  }
-
-  .projectIcons {
-    @apply flex flex-row flex-wrap gap-x-2 md:justify-center lg:gap-x-4 2xl:gap-x-6;
-  }
-
-  .projectImage {
-    @apply absolute top-0 left-0 -z-10 h-full max-h-[600px] w-full max-w-[600px] object-cover object-center opacity-10 md:top-1/4 md:h-1/2 md:w-1/2 md:border-2 md:border-black-200 md:opacity-50 lg:top-[12.5%] lg:h-3/4 lg:w-1/2;
-  }
-
-  .contactContainer {
-    @apply relative mx-auto flex h-full w-11/12 max-w-[450px] flex-col items-center justify-center gap-y-4 p-0 text-center lg:gap-y-8 xl:max-w-[600px];
-  }
-
-  .footerContainer {
+  .footer-container {
     @apply mx-auto flex h-full w-11/12 max-w-7xl flex-col flex-nowrap items-start justify-between gap-y-2 py-4 md:flex-row md:items-center md:gap-y-0 lg:py-8;
-  }
-
-  .footerText {
-    @apply text-base font-medium md:order-2 md:text-lg xl:text-xl;
   }
 }
