--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@
   }
 
   .white-sub-heading {
-    @apply mb-2 dark:text-white-300 md:text-2xl xl:mb-4 xl:text-3xl;
+    @apply mb-2 transition-colors duration-300 ease-out dark:text-white-300 md:text-2xl xl:mb-4 xl:text-3xl;
   }
 
   .experience-animation {
