--- a/app/globals.css
+++ b/app/globals.css
@@ -27,11 +27,11 @@
 
 @layer components {
   .navbar-gradient {
-    @apply absolute -top-64 -left-20 -z-20 h-[20rem] w-[4000px] -rotate-6 bg-gradient-to-b from-blue-gradient-1 to-blue-gradient-2 transition-bgi duration-300 ease-out dark:from-black-300 dark:to-black-300 md:-left-40 md:h-[31.25rem] xl:-top-80 xl:h-[37.5rem] 2xl:h-[43.75rem] 3xl:h-[50rem];
+    @apply absolute -left-20 -top-64 -z-20 h-[20rem] w-[4000px] -rotate-6 bg-gradient-to-b from-blue-gradient-1 to-blue-gradient-2 transition-bgi duration-300 ease-out dark:from-black-300 dark:to-black-300 md:-left-40 md:h-[31.25rem] xl:-top-80 xl:h-[37.5rem] 2xl:h-[43.75rem] 3xl:h-[50rem];
   }
 
   .dark-blue-gradient {
-    @apply absolute -top-56 -left-[4.5rem] -z-10 h-[120%] w-[4000px] -rotate-6 bg-dark-blue transition-colors duration-300 ease-out dark:bg-black-300 ipad-mini:h-[125%] lg:h-[135%] xl:h-[135%] 2xl:h-[145%] 3xl:h-[160%];
+    @apply absolute -left-[4.5rem] -top-56 -z-10 h-[120%] w-[4000px] -rotate-6 bg-dark-blue transition-colors duration-300 ease-out dark:bg-black-300 ipad-mini:h-[125%] lg:h-[135%] xl:h-[135%] 2xl:h-[145%] 3xl:h-[160%];
   }
 
   .dark-blue-section {
@@ -47,7 +47,7 @@
   }
 
   .dark-blue-container {
-    @apply relative mx-auto mb-32 h-full w-11/12 max-w-7xl pt-8 pr-20 text-white-300 sm:pr-36 md:grid md:grid-cols-3 md:place-items-start md:pr-0;
+    @apply relative mx-auto mb-32 h-full w-11/12 max-w-7xl pr-20 pt-8 text-white-300 sm:pr-36 md:grid md:grid-cols-3 md:place-items-start md:pr-0;
   }
 
   .about-me-text {
@@ -55,7 +55,7 @@
   }
 
   .about-me-animation {
-    @apply absolute -top-16 -right-12 h-44 w-44 dark:-top-0 dark:-right-0 dark:h-[7rem] dark:w-[7rem] md:static md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-6 md:h-72 md:w-72 md:place-self-center dark:md:right-12 dark:md:-top-16 dark:md:h-[10rem] dark:md:w-[10rem] lg:col-start-3 lg:h-[22rem] lg:w-[22rem] dark:lg:h-[13rem] dark:lg:w-[13rem] xl:h-[28rem] xl:w-[28rem];
+    @apply absolute -right-12 -top-16 h-44 w-44 dark:-right-0 dark:-top-0 dark:h-[7rem] dark:w-[7rem] md:static md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-6 md:h-72 md:w-72 md:place-self-center dark:md:-top-16 dark:md:right-12 dark:md:h-[10rem] dark:md:w-[10rem] lg:col-start-3 lg:h-[22rem] lg:w-[22rem] dark:lg:h-[13rem] dark:lg:w-[13rem] xl:h-[28rem] xl:w-[28rem];
   }
 
   .white-bg-heading {
